<resources>
    <string name="app_name">My Dice Roller</string>
    <string name="hello">Hello</string>
    <string name="roll_label">Roll</string>
    <string name="title">bora rolar um dado</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
    <string name="change_page">Proxima tela</string>
    <string name="teste">teste</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to Play</string>
    <string name="red">Red</string>
    <string name="Yellow">Yellow</string>
    <string name="green">Green</string>
</resources>